--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -19,6 +19,16 @@
   text-align: left;
 }
 
+.login-form__icon {
+  padding-top: 12px;
+  padding-bottom: 8px;
+  max-height: 15%;
+  height: auto;
+  width: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .login__title {
   font-weight: 600;
   margin-bottom: 0.5rem;
