--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -88,3 +88,103 @@ div.home-page > p {
   line-height: 24px;
   margin-right: 5px;
 }
+
+.home-page__search-container__features {
+  display: flex;
+  width: 100%;
+  margin-top: 4rem;
+}
+
+.home-page__search-container {
+  width: 50%;
+}
+
+.home-page__search-container__form {
+  display: flex;
+  flex-direction: column;
+  margin-right: 2rem;
+}
+
+.home-page__search-container > h2 {
+  font-size: 1.875rem;
+  font-weight: 700;
+  margin-bottom: 1.25rem;
+}
+
+.home-page__search-container__form > label {
+  width: 100%;
+  position: relative;
+  margin-bottom: 1.5rem;
+}
+
+.home-page__search-container__form > label:before {
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 0;
+  bottom: 0;
+  width: 20px;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25' fill-rule='evenodd'%3E%3Cpath d='M16.036 18.455l2.404-2.405 5.586 5.587-2.404 2.404zM8.5 2C12.1 2 15 4.9 15 8.5S12.1 15 8.5 15 2 12.1 2 8.5 4.9 2 8.5 2zm0-2C3.8 0 0 3.8 0 8.5S3.8 17 8.5 17 17 13.2 17 8.5 13.2 0 8.5 0zM15 16a1 1 0 1 1 2 0 1 1 0 1 1-2 0'%3E%3C/path%3E%3C/svg%3E")
+    center / contain no-repeat;
+}
+
+.home-page__search-container__form > label > input {
+  width: 100%;
+  border: 1px solid rgb(217, 217, 217);
+  border-radius: 0.25rem;
+  font-size: 100%;
+  padding: 8px 10px 8px 35px;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.home-page__search-container__form > button {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  height: 3rem;
+  font-weight: 700;
+  background-color: #f77070;
+  border-color: #f77070;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  border-style: solid;
+  border-radius: 0.75rem;
+  width: 100%;
+}
+
+.home-page__search-dates {
+  display: flex;
+  flex-direction: column;
+  flex: wrap;
+  font-size: 1rem;
+  width: 50%;
+}
+
+.home-page__search-dates > h2 {
+  font-size: 1.875rem;
+  font-weight: 700;
+  margin-bottom: 1.25rem;
+}
+
+.home-page__search-dates__feature__container {
+  margin-bottom: 2rem;
+}
+
+.home-page__search-dates__feature {
+  font-size: 14px;
+  line-height: 1;
+  padding: 1rem;
+  border-radius: 40px;
+  cursor: pointer;
+  color: #fff;
+  padding: 16px;
+  background-color: #008294;
+  border-color: #008294;
+  max-height: 3rem;
+  margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
+  text-decoration: none;
+  box-sizing: border-box;
+}
