--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -21,7 +21,7 @@
 #modal-content {
   position: absolute;
   background-color: white;
-  min-height: 100%;
+  max-height: 100%;
   width: 27%;
   display: flex;
   justify-content: center;
