--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -188,3 +188,22 @@ div.home-page > p {
   text-decoration: none;
   box-sizing: border-box;
 }
+
+.home-page__secondary-content {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 80px 0px;
+}
+
+.home-page__secondary-content > h2 {
+  margin-bottom: 8px;
+}
+
+.home-page__secondary-content > p {
+  width: 50%;
+  text-align: center;
+  margin-bottom: 40px;
+}
