--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -62,8 +62,7 @@ div.home-page > p {
 .home-page__topic-links__content {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  flex-shrink: 1;
+  flex: 1 1 0px;
 }
 
 .home-page__topic-link__image {
@@ -195,7 +194,8 @@ div.home-page > p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 80px 0px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .home-page__secondary-content > h2 {
@@ -206,4 +206,46 @@ div.home-page > p {
   width: 50%;
   text-align: center;
   margin-bottom: 40px;
+}
+
+.home-page__secondary-content__events-and-groups {
+  display: flex;
+  width: 100%;
+}
+
+.home-page__secondary-content__events-and-groups__content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 24px;
+  width: 33.333%;
+  height: 100%;
+}
+
+.home-page__secondary-content__events-and-groups__content-container > h3 {
+  margin-bottom: 0.75rem;
+}
+
+.home-page__secondary-content__events-and-groups__content-container > p {
+  text-align: center;
+}
+
+.home-page__secondary-content__signup {
+  font-size: 1rem;
+  line-height: 24px;
+  padding: 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  color: #fff;
+  padding: 8px 16px;
+  background-color: #008294;
+  border-color: #008294;
+  max-height: 3rem;
+  margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
+  text-decoration: none;
+  box-sizing: border-box;
+  text-align: center;
+  margin-top: 3rem;
 }
