--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -249,3 +249,90 @@ div.home-page > p {
   text-align: center;
   margin-top: 3rem;
 }
+
+.home-page__tertiary-content {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.upcoming-events__container {
+  width: 100%;
+  height: 350px;
+  /* display: flex; */
+}
+
+.upcoming-events-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.upcoming-events-header > h2 {
+  font-weight: 700;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.upcoming-events-header__explore {
+  text-decoration: none;
+  color: rgb(0, 130, 148);
+  cursor: pointer;
+}
+
+.upcoming-events {
+  display: flex;
+  gap: 0.15rem;
+}
+
+.upcoming-events__event {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  padding: 12px;
+}
+
+.upcoming-events__event > img {
+  border: 1px solid #d9d9d9;
+  border-radius: 0.5rem;
+  max-width: 265px;
+  max-height: 150px;
+  vertical-align: middle;
+  object-fit: cover;
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.upcoming-events__event__details {
+  display: flex;
+  flex-direction: column;
+}
+
+.upcoming-events__event__details > time {
+  color: rgb(135, 116, 87);
+  letter-spacing: -0.35px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.upcoming-events-event-title {
+  color: rgb(33, 33, 33);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 24px;
+  padding-bottom: 4px;
+  margin: 0;
+  margin-top: 4px;
+}
+
+.upcoming-events__group-name {
+  color: rgb(117, 117, 117);
+  font-size: 0.875rem;
+  line-height: 20px;
+  margin: 0;
+}
