footer columns finished

--- a/frontend/src/components/LoginFormModal/index.css
+++ b/frontend/src/components/LoginFormModal/index.css
@@ -10,6 +10,19 @@
   background: none;
 }
 
+.footer-login {
+  text-decoration: none;
+  color: rgb(197, 196, 196);
+  font-size: 14px;
+  cursor: pointer;
+  margin: 4px 0px;
+  border: none;
+  background: none;
+  cursor: pointer;
+  text-align: start;
+  padding: 0;
+}
+
 input,
 textarea,
 button {
