--- a/frontend/src/components/HomePage/UpcomingEvent.css
+++ b/frontend/src/components/HomePage/UpcomingEvent.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   width: 25%;
   padding: 12px;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .upcoming-events__event > img {
