--- a/frontend/src/components/HomePageNavigation/ProfileButton.css
+++ b/frontend/src/components/HomePageNavigation/ProfileButton.css
@@ -2,5 +2,18 @@
   height: 50px;
   border-radius: 50%;
   width: 50px;
-  background-color: ;
+  background-color: hsla(170, 45%, 34%, 0.341);
+  font-weight: 500;
+  color: rgb(17, 15, 15);
+  font-family: inherit;
+}
+
+.profile-page-img {
+  width: 20vw;
+  height: 40vh;
+  background-color: hsla(170, 45%, 34%, 0.341);
+  border-radius: 50%;
+  font-weight: 400;
+  font-size: 6rem;
+  color: rgb(17, 15, 15);
 }
