--- a/frontend/src/components/EventDetailsPage/EventDetailsPage.css
+++ b/frontend/src/components/EventDetailsPage/EventDetailsPage.css
@@ -64,3 +64,101 @@
   font-weight: 500;
   line-height: 24px;
 }
+
+.event-details-page__main-content-container {
+  padding: 48px 20px 24px 20px;
+  background-color: rgb(246, 247, 248);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.event-details-page__main-content {
+  width: 70%;
+}
+
+.event-details-page__main-img-content {
+  display: flex;
+  gap: 6rem;
+}
+
+.event-details-page__main-img-content > img {
+  width: 660px;
+  height: 370px;
+  object-fit: cover;
+}
+
+.right-hand-event-info {
+  max-height: 556px;
+  width: 347px;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.right-event-info__group-container {
+  display: flex;
+  gap: 1rem;
+  padding: 24px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 16px;
+}
+
+.right-event-info__group-container > img {
+  width: 56px;
+  height: 56px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.right-event-info__group-name {
+  font-size: 14px;
+  font-weight: 500;
+  background-color: rgb(255, 255, 255);
+}
+
+.right-time-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.right-event-info__location-container {
+  width: 306px;
+  height: 140px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.fa-clock {
+  color: rgb(173, 173, 173);
+}
+
+.fa-location-pin {
+  color: rgb(173, 173, 173);
+}
+
+.location-address-city-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.location-address {
+  display: flex;
+  flex-direction: column;
+  font-size: 1rem;
+}
+
+.event-details__description {
+  width: 58%;
+}
+
+.event-details__description > h2 {
+  font-size: 20px;
+}
