--- a/frontend/src/components/OtherEvents/OtherEventCard.css
+++ b/frontend/src/components/OtherEvents/OtherEventCard.css
@@ -6,7 +6,7 @@
 }
 
 .other-event-card {
-  height: 258px;
+  height: 225px;
   width: 298px;
   max-width: 340px;
   border: 1px solid rgb(246, 247, 248);
@@ -32,6 +32,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  color: rgb(0, 0, 0);
 }
 
 .other-event-details > p {
