--- a/frontend/src/components/GroupDetailsPage/GroupDetailsHeader.css
+++ b/frontend/src/components/GroupDetailsPage/GroupDetailsHeader.css
@@ -2,19 +2,18 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   align-items: center;
   justify-content: center;
   padding: 24px 20px;
-  flex: start;
   border-bottom: 1px solid rgba(46, 62, 72, 0.12);
+  /* position: relative; */
 }
 
 .group-details-header-content {
   width: 70%;
   display: flex;
   gap: 2rem;
+  /* position: relative; */
 }
 
 .group-details-header-content > img {
@@ -81,4 +80,36 @@
   font-size: 14px;
   padding: 0;
   margin-right: 0.25rem;
+}
+
+.groups-delete-edit-menu {
+  position: absolute;
+  top: 0;
+  left: 100;
+  bottom: 0;
+  right: 0px;
+}
+
+.group-edit-delete-menu-container {
+  position: absolute;
+  top: 30%;
+  left: 90%;
+  bottom: 0;
+  right: 0px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.group-edit-delete-menu {
+  background-color: rgb(246, 247, 248);
+  border-radius: 0.5rem;
+}
+
+.group-edit-delete-menu-container button {
+  background: none;
+  border: none;
+  margin: 0;
+  cursor: pointer;
 }
