implemented delete for groups

--- a/frontend/src/components/GroupDetailsPage/GroupDetailsHeader.css
+++ b/frontend/src/components/GroupDetailsPage/GroupDetailsHeader.css
@@ -92,7 +92,7 @@
 
 .group-edit-delete-menu-container {
   position: absolute;
-  top: 30%;
+  top: 125px;
   left: 90%;
   bottom: 0;
   right: 0px;
