--- a/frontend/src/components/EventDetailsPage/EventDetailsHeader.css
+++ b/frontend/src/components/EventDetailsPage/EventDetailsHeader.css
@@ -64,3 +64,53 @@
   font-weight: 500;
   line-height: 24px;
 }
+
+.event-edit-delete-menu-container .fa-ellipsis {
+  margin-bottom: 1rem;
+}
+
+.event-delete-edit-menu {
+  position: absolute;
+  top: 0;
+  left: 100;
+  bottom: 0;
+  right: 0px;
+}
+
+.event-edit-delete-menu-container {
+  position: absolute;
+  top: 125px;
+  left: 90%;
+  bottom: 0;
+  right: 0px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.event-edit-delete-menu {
+  background-color: rgb(246, 247, 248);
+  border-radius: 0.5rem;
+  margin-right: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem;
+  width: 125px;
+}
+
+.edit-event-link {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+}
+
+.event-edit-delete-menu-container button {
+  background: none;
+  border: none;
+  margin: 0;
+  cursor: pointer;
+  font-size: 16px;
+}
