--- a/frontend/src/components/GroupDetailsPage/GroupDetailsHeader.css
+++ b/frontend/src/components/GroupDetailsPage/GroupDetailsHeader.css
@@ -131,3 +131,24 @@
   cursor: pointer;
   font-size: 16px;
 }
+
+.create-event-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+.create-event-container button {
+  outline: none;
+  background-color: rgb(246, 88, 88);
+  border-radius: 0.5rem;
+  color: #fff;
+  font-size: 0.875rem;
+  line-height: 20px;
+  border: 1px solid rgb(246, 88, 88);
+  padding: 10px 20px;
+  cursor: pointer;
+}
