--- a/frontend/src/components/HomePageNavigation/Navigation.css
+++ b/frontend/src/components/HomePageNavigation/Navigation.css
@@ -14,6 +14,7 @@
   font-weight: 500;
   color: rgb(33, 33, 33);
   margin-left: 20px;
+  margin-right: 0.25rem;
 }
 
 div.home-page-navigation > ul > li {
