--- a/frontend/src/components/GroupDetailsPage/GroupDetailsPage.css
+++ b/frontend/src/components/GroupDetailsPage/GroupDetailsPage.css
@@ -1,5 +1,5 @@
 .group-details-page__main-content-container {
-  padding: 48px 20px 24px 20px;
+  padding: 48px 20px 48px 20px;
   background-color: rgb(246, 247, 248);
   display: flex;
   flex-direction: column;
@@ -15,4 +15,9 @@
 .about-and-upcoming-container {
   display: flex;
   flex-direction: column;
+}
+
+.about-and-upcoming-container > h4 {
+  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
 }
