--- a/frontend/src/components/CreateGroupForm/CreateGroupForm.css
+++ b/frontend/src/components/CreateGroupForm/CreateGroupForm.css
@@ -88,3 +88,9 @@
 .create-group-form-container button:hover {
   background-color: rgb(247, 112, 112);
 }
+
+.create-group-form > ul {
+  list-style: none;
+  color: red;
+  text-align: center;
+}
