--- a/frontend/src/components/HomePageNavigation/Navigation.css
+++ b/frontend/src/components/HomePageNavigation/Navigation.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Syne:wght@400;500;700&display=swap");
+
 .home-page-navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
   min-height: 64px;
   margin: 0px 15px;
+}
+
+.hackup-logo {
+  color: red;
+  font-family: Syne;
+  font-size: 2rem;
+  font-weight: 500;
+  margin-left: 0.5rem;
+  text-decoration: none;
 }
 
 .home-page-navigation__sign-up {
@@ -15,6 +26,10 @@
   color: rgb(33, 33, 33);
   margin-left: 20px;
   margin-right: 0.25rem;
+}
+
+.home-page-navigation__sign-up:hover {
+  color: rgb(0, 130, 148);
 }
 
 div.home-page-navigation > ul > li {
