--- a/frontend/src/components/EventDetailsPage/EventDetailsHeader.css
+++ b/frontend/src/components/EventDetailsPage/EventDetailsHeader.css
@@ -114,3 +114,37 @@
   cursor: pointer;
   font-size: 16px;
 }
+
+.event-attend-container {
+  position: absolute;
+  top: 125px;
+  left: 85%;
+  bottom: 0;
+  right: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.event-attend-button {
+  background-color: rgb(246, 88, 88);
+  border-radius: 0.5rem;
+  color: #fff;
+  font-size: 0.75rem;
+  font-weight: bold;
+  line-height: 20px;
+  border: 1px solid rgb(246, 88, 88);
+  padding: 7px 12.5px;
+  cursor: pointer;
+}
+
+.event-attend-button-request {
+  background-color: rgb(197, 196, 196);
+  border-radius: 0.5rem;
+  color: #ffffff;
+  font-size: 0.75rem;
+  font-weight: bold;
+  line-height: 20px;
+  border: 1px solid rgb(197, 196, 196);
+  padding: 7px 12.5px;
+}
