--- a/frontend/src/components/ApproveMembers/ApproveMembers.css
+++ b/frontend/src/components/ApproveMembers/ApproveMembers.css
@@ -38,7 +38,7 @@
   height: 100%;
   padding: 0 20px;
   margin-bottom: 1rem;
-  border-bottom: 1px solid #e6e6e6;
+  /* border-bottom: 1px solid #e6e6e6; */
   gap: 1rem;
 }
 
