--- a/frontend/src/components/EventDetailsPage/EventDetailsHeader.css
+++ b/frontend/src/components/EventDetailsPage/EventDetailsHeader.css
@@ -131,11 +131,16 @@
   border-radius: 0.5rem;
   color: #fff;
   font-size: 0.75rem;
+  letter-spacing: 0.5px;
   font-weight: bold;
   line-height: 20px;
   border: 1px solid rgb(246, 88, 88);
   padding: 7px 12.5px;
   cursor: pointer;
+}
+
+.event-attend-button:hover {
+  opacity: 0.8;
 }
 
 .event-attend-button-request {
@@ -144,6 +149,7 @@
   color: #ffffff;
   font-size: 0.75rem;
   font-weight: bold;
+  letter-spacing: 0.5px;
   line-height: 20px;
   border: 1px solid rgb(197, 196, 196);
   padding: 7px 12.5px;
